@@ -1,0 +1,37 @@
+#============================================================================
+# Configure Main Scheduler Properties  
+#
+# http://www.opensymphony.com/quartz/wikidocs/ConfigMain.html
+# http://www.opensymphony.com/quartz/api/
+#============================================================================
+
+org.quartz.scheduler.instanceName = Red5_Scheduler
+org.quartz.scheduler.instanceId = AUTO
+
+# org.quartz.scheduler.classLoadHelper.class
+# Defaults to the most robust approach, which is to use the "org.quartz.simpl.CascadingClassLoadHelper" class
+# which in turn uses every other ClassLoadHelper class until one works. You should probably not find the need 
+# to specify any other class for this property, though strange things seem to happen within application servers. 
+# All of the current possible ClassLoadHelper implementation can be found in the org.quartz.simpl package.
+# Default helper
+org.quartz.scheduler.classLoadHelper.class = org.quartz.simpl.CascadingClassLoadHelper
+#org.quartz.scheduler.classLoadHelper.class = org.quartz.simpl.LoadingLoaderClassLoadHelper
+#org.quartz.scheduler.classLoadHelper.class = org.quartz.simpl.ThreadContextClassLoadHelper
+#org.quartz.scheduler.classLoadHelper.class = org.quartz.simpl.SimpleClassLoadHelper
+#org.quartz.scheduler.classLoadHelper.class = org.red5.classloading.QuartzClassLoadHelper
+
+#============================================================================
+# Configure ThreadPool  
+#============================================================================
+
+org.quartz.threadPool.class = org.quartz.simpl.SimpleThreadPool
+org.quartz.threadPool.threadCount = 12
+org.quartz.threadPool.threadPriority = 5
+
+#============================================================================
+# Configure JobStore  
+#============================================================================
+
+org.quartz.jobStore.misfireThreshold = 60000
+
+org.quartz.jobStore.class = org.quartz.simpl.RAMJobStore
